# radar_speed_estimate

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: noise_comparison.txt  scenario_45deg_140deg_points_xyvr.csv  scenario_45deg_140deg_summary.txt  scenario_rigid_body_points_summary.txt  scenario_rigid_body_points_xyvr.csv  tutorial_velocity_estimation_overview.txt  velocity_estimation_demo.txt
context/: 2026-02-19_obsidian_radar_velocity_notes.md
context/vault_notes/: chatgpt radar true velocity 2026-02-19.md  gemini radar true velocity 2026-02-19.md  noise free radar speed estimate perplexity.md  perplexity radar true velocity 2026-02-19.md
docs/: method.md  testing.md  tutorial.md  validation_report.md
scripts/: noise_comparison.py  scenario_45deg_140deg.py  scenario_rigid_body_points.py  visualize_estimation.py
src/radar_speed_estimate/: __init__.py  estimator.py
tests/: test_estimator.py
