[project]
name = "radar-speed-estimate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ll7", email = "32880741+ll7@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[project.scripts]
radar-speed-estimate = "radar_speed_estimate:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
